--- a/index.html
+++ b/index.html
@@ -2,105 +2,129 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home | AI Powered Resume Analyzer</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Powered Resume Analyzer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f0f8ff;
+      color: #003366;
+    }
+    header {
+      background-color: #003366;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background: #00509e;
+      text-align: center;
+      padding: 0.5rem;
+    }
+    nav button {
+      background: #0077cc;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      margin: 0.3rem;
+      cursor: pointer;
+      border-radius: 8px;
+    }
+    nav button:hover {
+      background: #3399ff;
+    }
+    section {
+      display: none;
+      padding: 2rem;
+    }
+    section.active {
+      display: block;
+    }
+    footer {
+      background-color: #003366;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>AI Powered Resume Analyzer</h1>
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="what-we-developed.html">What We Developed</a> |
-      <a href="complete-project.html">Complete Project</a> |
-      <a href="project-mission.html">Project Mission</a> |
-      <a href="project-vision.html">Project Vision</a> |
-      <a href="goals.html">Goals</a> |
-      <a href="web-app-installation.html">Web App Installation</a> |
-      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub</a>
-    </nav>
   </header>
 
+  <nav>
+    <button onclick="showSection('home')">Home</button>
+    <button onclick="showSection('developed')">What We Developed</button>
+    <button onclick="showSection('project')">Complete Project</button>
+    <button onclick="showSection('mission')">Project Mission</button>
+    <button onclick="showSection('vision')">Project Vision</button>
+    <button onclick="showSection('goals')">Goals</button>
+    <button onclick="showSection('installation')">Web App Installation</button>
+  </nav>
+
   <main>
-    <section id="abstract">
-      <h2>Abstract</h2>
-      <p>
-        This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
-      </p>
-      <p>
-        Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores. It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
-      </p>
+    <section id="home" class="active">
+      <h2>Home</h2>
+      <p>Welcome to the AI-Powered Resume Analyzer project site.</p>
     </section>
 
-    <section id="method">
-      <h2>Method Overview</h2>
-      <p>
-        The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings. It includes modules for skill extraction, job title prediction, and candidate ranking.
-      </p>
+    <section id="developed">
+      <h2>What We Developed</h2>
+      <p>This project involves a transformer-based resume parser and job matcher built using TensorFlow and NLP.</p>
     </section>
 
-    <section id="features">
-      <h2>Key Features</h2>
+    <section id="project">
+      <h2>Complete Project</h2>
+      <p>We integrated resume parsing, job matching, skill extraction, and candidate scoring into one unified system.</p>
+    </section>
+
+    <section id="mission">
+      <h2>Project Mission</h2>
+      <p>Our mission is to streamline the recruitment process through AI-driven resume analysis and intelligent candidate-job alignment.</p>
+    </section>
+
+    <section id="vision">
+      <h2>Project Vision</h2>
+      <p>We envision a recruitment process empowered by AI to minimize bias and maximize efficiency.</p>
+    </section>
+
+    <section id="goals">
+      <h2>Goals</h2>
       <ul>
-        <li>Resume Parsing into structured JSON</li>
-        <li>Job Description Matching</li>
-        <li>Job Title Prediction using ML</li>
-        <li>Semantic Skill Extraction</li>
-        <li>Candidate Ranking and Score Visualization</li>
+        <li>Automate resume screening</li>
+        <li>Improve job-candidate matching accuracy</li>
+        <li>Enhance recruiter decision-making</li>
       </ul>
     </section>
 
-    <section id="info-extracted">
-      <h2>Information Extracted</h2>
-      <ul>
-        <li>Job Title</li>
-        <li>Candidate Highlights</li>
-        <li>Direct Skill Matches</li>
-        <li>Related Skills</li>
-        <li>Experience Alignment</li>
-        <li>Keyword Frequency Score</li>
-        <li>Overall Matching Score</li>
-      </ul>
-    </section>
-
-    <section id="visuals">
-      <h2>Visualizations</h2>
-      <h3>Match Score Visualization</h3>
-      <p>Match Score Visualization</p>
-      <h3>Resume Highlights</h3>
-      <p>Resume Parsing Demo</p>
-    </section>
-
-    <section id="resources">
-      <h2>Resources</h2>
-      <ul>
-        <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank" rel="noopener noreferrer">Google Drive</a></li>
-        <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
-        <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank" rel="noopener noreferrer">Google Colab Notebook</a></li>
-      </ul>
-    </section>
-
-    <section id="demo">
-      <h2>Video Demonstration</h2>
-      <p>Watch the system in action in this brief demonstration:</p>
-      <iframe src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
-    </section>
-
-    <section id="citation">
-      <h2>Citation</h2>
-      <pre><code>@misc{gano2025resumeanalyzer,
-  title={AI-Powered Resume Analyzer},
-  author={Gano},
-  year={2025},
-  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
-}</code></pre>
+    <section id="installation">
+      <h2>Web App Installation</h2>
+      <p>To run the app locally:</p>
+      <ol>
+        <li>Clone the GitHub repo</li>
+        <li>Install requirements using <code>pip install -r requirements.txt</code></li>
+        <li>Run <code>streamlit run app.py</code></li>
+      </ol>
+      <p>GitHub: <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">Repository Link</a></p>
     </section>
   </main>
 
   <footer>
-    <p>Developed By Students from University of Juba</p>
-    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>Developed by Students from University of Juba</p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: lightblue;">ganomanut@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
+
+  <script>
+    function showSection(id) {
+      document.querySelectorAll("section").forEach(section => {
+        section.classList.remove("active");
+      });
+      document.getElementById(id).classList.add("active");
+    }
+  </script>
 </body>
 </html>
